Added database using file and readable formatting